--- a/Exercício_JQuery/main.css
+++ b/Exercício_JQuery/main.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+h1 {
+    font-size: 200%;
+}
 
 body {
     background-color: black;
@@ -15,7 +18,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 200px;
+    height: 100vh;
 }
 
 form {
@@ -25,44 +28,45 @@ form {
 }
 
 input {
-    width: 300px;
-    height: 50px;
+    width: 500px;
+    height: 30px;
     outline: none;
     padding: 0 10px;
     font-size: 16px;
     color: #555;
-    border-radius: 20px;
+    border-radius: 20%;
+    text-align: center;
 }
 
 button {
-    width: 200px;
-    height: 50px;
+    width: 100px;
+    height: 30px;
     padding: 0 10px;
     font-size: 16px;
     font-weight: bold;
     background-color: blue;
     color: white;  
-    border-radius: 20px;
+    border-radius: 20%;
 }
 
 button:hover {
     cursor: pointer;
     background-color: rgb(60, 80, 255);
-    color: white;
+    color: rgb(91, 103, 216);
 }
 
-ul {
+ol {
     list-style-type: none;
     padding: 16px;
 }
 
-ul li:hover {
+ol li:hover {
     text-align: center;
     cursor: pointer;
 }
 
-ul li.has-marker {
-    list-style-type: none;
+ol li.TarefaInserida {
+    padding-bottom: 10px;
 }
 
 .strike-through{
